Re-added overflow:hidden to remove horizontal scrolling bug

--- a/public/stylesheets/index.scss
+++ b/public/stylesheets/index.scss
@@ -137,6 +137,7 @@ $white: #ffffff;
 
 .chapters {
     margin-top: 10%;
+    overflow: hidden;
 
     h2 {
         color: lightblue;
